--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Home page</title>
     <script type="text/javascript">
         function changePage(pageName) {
-            window.location = 'http://localhost:8081/'+pageName;
+            window.location = 'http://localhost:8765/'+pageName;
         }
     </script>
 </head>
@@ -14,6 +14,6 @@
 <p id="val"></p>
 
 <button onclick="changePage('test');">next page</button>
-<button onclick="changePage('getAllUsers');">get all users</button>
+<button onclick="changePage('getSpaceInfo');">get space information</button>
 </body>
 </html>
